--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  background-color: #00B0FF;
+  border: 0;
+  padding: 10px 20px;
+  border-radius: 20px;
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  cursor: pointer;
+  color: white;
+}
+
+input[type=text] {
+  border-radius: 20px;
+  border: 1px solid;
+  padding: 5px 10px;
+}
+
+input[type=range] {
+  width: 200px;
+  height: 15px;
+  -webkit-appearance: none;
+  appearance: none;
+  background: #888;
+  outline: none;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: inset 0 0 5px rgb(100, 100, 100);
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: #00B0FF;
+  cursor: pointer;
+  border: 4px solid rgb(75, 75, 75);
+  box-shadow: -207px 0 0 200px #00B0FF;
+}
+
+button:hover {
+  background-color: #0091EA;
+}
+
+a {
+  color: #00B0FF;
+}
+
+a:visited {
+  color: #00008b;
+}
+
+a:hover {
+  color: #00008b;
+}
+
+.credits {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
 }
